<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/home"
    android:id="@+id/home_menu"
    android:orderInCategory="10"
    android:icon="@drawable/ic_home"
    app:showAsAction="always"
    />
    <item
        android:title="@string/test_your_self"
        android:id="@+id/self_test"
        android:orderInCategory="20"
        app:showAsAction="never"
        />
    <item
        android:title="@string/faq"
        android:id="@+id/FAQ"
        android:orderInCategory="30"
        app:showAsAction="never"

        />
    <item
    android:title="@string/support"
    android:id="@+id/support"
    android:orderInCategory="40"
    app:showAsAction="never"
    />
    <item
    android:title="@string/about"
    android:id="@+id/about_us"
    android:orderInCategory="50"
    app:showAsAction="never"
    />



</menu>